TestCases/Errors/threaded_movement/observations/aut_02_obs.spm
 obs   16-5   0.000654450261780105 
 obs   15-6   0.000430501786922666 
 obs   16-6   0.000419996666716415 
 obs   17-6   0.000285902268427499 
 obs   18-6   0 
 obs   20-6   0 
 obs   15-7   0.000380988243010708 
 obs   16-7   0.000303660266505981 
 obs   17-7   0.000181173734348546 
 obs   18-7   0 
 obs   20-7   0 
 obs   5-12   0.00157142857142857 
 obs   18-12   0 
 obs   19-12   0 
 obs   5-13   0.00193945868945869 
 obs   18-14   0 
 obs   19-14   0 
 obs   18-15   0 
 obs   19-15   0 
 obs   9-17   0.00444444444444444 
 obs   9-18   0.0211855897605649 
 obs   9-19   0.00601503759398496 
 obs   11-19   0.0142261904761905 
 obs   11-20   0.0196577380952381 
 obs   11-21   0.01 
 error_value   16-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   18-6   0 
 error_value   20-6   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   17-7   0 
 error_value   18-7   0 
 error_value   20-7   0 
 error_value   5-12   0 
 error_value   18-12   0 
 error_value   19-12   0 
 error_value   5-13   0 
 error_value   18-14   0 
 error_value   19-14   0 
 error_value   18-15   0 
 error_value   19-15   0 
 error_value   9-17   0 
 error_value   9-18   0 
 error_value   9-19   0 
 error_value   11-19   0 
 error_value   11-20   0 
 error_value   11-21   0 
